Created the boilerplate

--- a/index.html
+++ b/index.html
@@ -2,9 +2,140 @@
 <html>
 <head>
   <title></title>
-  <link rel="stylesheet" type="text/css" href="main.css">
+  <link rel="stylesheet" type="text/css" href="quiz.css">
 </head>
 <body>
-
+<article class="card">
+  <header>
+    <h1 class="productName"></h1>
+  </header>
+  <section>
+    <img src="" class="productImg">
+    <p class="description"></p>
+    <div class="availability"></div>
+  </section>
+  <section>
+    <header class="specifications"></header>
+    <p class="size"></p>
+    <p class="weight"></p>
+    <footer class="invalidDate"></footer>
+  </section>
+  <section>
+    <header class="pricing"></header>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+  </section>
+</article>
+<article class="card">
+  <header>
+    <h1 class="productName"></h1>
+  </header>
+  <section>
+    <img src="" class="productImg">
+    <p class="description"></p>
+    <div class="availability"></div>
+  </section>
+  <section>
+    <header class="specifications"></header>
+    <p class="size"></p>
+    <p class="weight"></p>
+    <footer class="invalidDate"></footer>
+  </section>
+  <section>
+    <header class="pricing"></header>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+  </section>
+</article>
+<article class="card">
+  <header>
+    <h1 class="productName"></h1>
+  </header>
+  <section>
+    <img src="" class="productImg">
+    <p class="description"></p>
+    <div class="availability"></div>
+  </section>
+  <section>
+    <header class="specifications"></header>
+    <p class="size"></p>
+    <p class="weight"></p>
+    <footer class="invalidDate"></footer>
+  </section>
+  <section>
+    <header class="pricing"></header>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+  </section>
+</article>
+<article class="card">
+  <header>
+    <h1 class="productName"></h1>
+  </header>
+  <section>
+    <img src="" class="productImg">
+    <p class="description"></p>
+    <div class="availability"></div>
+  </section>
+  <section>
+    <header class="specifications"></header>
+    <p class="size"></p>
+    <p class="weight"></p>
+    <footer class="invalidDate"></footer>
+  </section>
+  <section>
+    <header class="pricing"></header>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+  </section>
+</article>
+<article class="card">
+  <header>
+    <h1 class="productName"></h1>
+  </header>
+  <section>
+    <img src="" class="productImg">
+    <p class="description"></p>
+    <div class="availability"></div>
+  </section>
+  <section>
+    <header class="specifications"></header>
+    <p class="size"></p>
+    <p class="weight"></p>
+    <footer class="invalidDate"></footer>
+  </section>
+  <section>
+    <header class="pricing"></header>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+  </section>
+</article>
+<article class="card">
+  <header>
+    <h1 class="productName"></h1>
+  </header>
+  <section>
+    <img src="" class="productImg">
+    <p class="description"></p>
+    <div class="availability"></div>
+  </section>
+  <section>
+    <header class="specifications"></header>
+    <p class="size"></p>
+    <p class="weight"></p>
+    <footer class="invalidDate"></footer>
+  </section>
+  <section>
+    <header class="pricing"></header>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+  </section>
+</article>
 </body>
 </html>
