Added the first product to the site

--- a/index.html
+++ b/index.html
@@ -1,16 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title></title>
+  <title> Gluten-free Goddess</title>
   <link rel="stylesheet" type="text/css" href="quiz.css">
 </head>
 <body>
+<article>  
+  <header>
+    <nav>
+      <ul>
+        <li> <a href="#"> About </a></li>
+        <li> <a href="#"> Food </a></li> 
+        <li> <a href="#"> Recipes </a></li>
+        <li> <a href="#"> Other Products </a></li>
+      </ul>
+    </nav>
+  </header>
+  <section class="about">
+    <h1 id="title"> Gluten-Free Goddess</h1>
+    <p>  Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water chestnut gourd swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke. </p>
+  </section>
+</article>
 <article class="card">
   <header>
-    <h1 class="productName"></h1>
+    <h1 class="productName"> Birch Benders Pancake &amp; Waffle Mix </h1>
   </header>
   <section>
-    <img src="" class="productImg">
+    <img src="images/pancakeMix.jpg" class="productImg">
+    <p class="description">
+      Birch Benders Pancake and Waffle Mix Gluten Free are so good, you won’t even miss the wheat! They start with a perfect blend of wheat-free flours, then add their signature Oregon hazelnut meal, resulting in, dare they say, pancake poetry. But don’t take their word for it, the proof is in the pancake! Preparation is a breeze: simply scoop the desired amount of mix into a bowl, add water, mix, and make! That's right, just add water, no eggs or milk necessary! Don't want to use it all at once? Their resealable closure keeps the mix fresh for next time. Easier, healthier, tastier, these pancakes have it all! Pancake and Waffle Mix Gluten Free is organic, kosher, natural, gluten free, and free of soy and wheat.
+    </p>
+    <div class="availability"></div>
+  </section>
+  <section>
+    <header class="specifications"></header>
+    <p class="size"> Size: 14 oz. </p>
+    <p class="weight"> Weight: 35 grams </p>
+    <footer class="invalidDate"></footer>
+  </section>
+  <section>
+    <header class="pricing"> Pricing </header>
+    <p class="quantityPricing"> 1 package: $5.92 </p>
+    <p class="quantityPricing"> 3 or more: $5.86/package</p>
+    <p class="quantityPricing"> 6 or more: $5.80/package</p>
+  </section>
+</article>
+<article class="card">
+  <header>
+    <h1 class="productName"> Betty Crocker Brownie Mix</h1>
+  </header>
+  <section>
+    <img src="images/chocolate.jpg" class="productImg">
     <p class="description"></p>
     <div class="availability"></div>
   </section>
@@ -29,10 +69,10 @@
 </article>
 <article class="card">
   <header>
-    <h1 class="productName"></h1>
+    <h1 class="productName"> Synder's Honey-Mustard Pretzels </h1>
   </header>
   <section>
-    <img src="" class="productImg">
+    <img src="images/pretzels.jpg" class="productImg">
     <p class="description"></p>
     <div class="availability"></div>
   </section>
@@ -51,10 +91,32 @@
 </article>
 <article class="card">
   <header>
-    <h1 class="productName"></h1>
+    <h1 class="productName"> eos Chapstick </h1>
   </header>
   <section>
-    <img src="" class="productImg">
+    <img src="images/chapstick.jpg" class="productImg">
+    <p class="description"></p>
+    <div class="availability"></div>
+  </section>
+  <section>
+    <header class="specifications"> </header>
+    <p class="size"></p>
+    <p class="weight"></p>
+    <footer class="invalidDate"></footer>
+  </section>
+  <section>
+    <header class="pricing"></header>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+    <p class="quantityPricing"></p>
+  </section>
+</article>
+<article class="card">
+  <header>
+    <h1 class="productName"> Jason's Daily Shampoo </h1>
+  </header>
+  <section>
+    <img src="images/shampoo.jpeg" class="productImg">
     <p class="description"></p>
     <div class="availability"></div>
   </section>
@@ -73,54 +135,10 @@
 </article>
 <article class="card">
   <header>
-    <h1 class="productName"></h1>
+    <h1 class="productName"> Jason's Daily Conditioner </h1>
   </header>
   <section>
-    <img src="" class="productImg">
-    <p class="description"></p>
-    <div class="availability"></div>
-  </section>
-  <section>
-    <header class="specifications"></header>
-    <p class="size"></p>
-    <p class="weight"></p>
-    <footer class="invalidDate"></footer>
-  </section>
-  <section>
-    <header class="pricing"></header>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
-  </section>
-</article>
-<article class="card">
-  <header>
-    <h1 class="productName"></h1>
-  </header>
-  <section>
-    <img src="" class="productImg">
-    <p class="description"></p>
-    <div class="availability"></div>
-  </section>
-  <section>
-    <header class="specifications"></header>
-    <p class="size"></p>
-    <p class="weight"></p>
-    <footer class="invalidDate"></footer>
-  </section>
-  <section>
-    <header class="pricing"></header>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
-  </section>
-</article>
-<article class="card">
-  <header>
-    <h1 class="productName"></h1>
-  </header>
-  <section>
-    <img src="" class="productImg">
+    <img src="images/shampoo.jpeg" class="productImg">
     <p class="description"></p>
     <div class="availability"></div>
   </section>
