Added all product descriptions and specs

--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
   <section>
     <header class="pricing"> Pricing </header>
     <p class="quantityPricing"> 1 package: $5.92 </p>
-    <p class="quantityPricing"> 3 or more: $5.86/package</p>
-    <p class="quantityPricing"> 6 or more: $5.80/package</p>
+    <p class="quantityPricing"> 3 or more: $5.86/ea</p>
+    <p class="quantityPricing"> 6 or more: $5.80/ea</p>
   </section>
 </article>
 <article class="card">
@@ -51,20 +51,21 @@
   </header>
   <section>
     <img src="images/chocolate.jpg" class="productImg">
-    <p class="description"></p>
+    <p class="description"> Give in to the delicious taste of Betty Crocker gluten free brownies.
+Betty Crocker brownies make it easy to turn an ordinary day into something special! From the box to the oven in less than five minutes, these great-tasting, gluten free sweets will be enjoyed by your family in no time! </p>
     <div class="availability"></div>
   </section>
   <section>
     <header class="specifications"></header>
-    <p class="size"></p>
-    <p class="weight"></p>
+    <p class="size"> Size: 16 oz. </p>
+    <p class="weight"> Weight: 454 grams </p>
     <footer class="invalidDate"></footer>
   </section>
   <section>
-    <header class="pricing"></header>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
+    <header class="pricing"> Pricing </header>
+    <p class="quantityPricing"> 1 box: $8.98 </p>
+    <p class="quantityPricing"> 3 or more: $7.98/ea </p>
+    <p class="quantityPricing"> 6 or more: $7.48/ea</p>
   </section>
 </article>
 <article class="card">
@@ -73,20 +74,20 @@
   </header>
   <section>
     <img src="images/pretzels.jpg" class="productImg">
-    <p class="description"></p>
+    <p class="description"> Made with the finest premium ingredients, our Honey, Mustard &amp; Onion Gluten Free Pretzel Sticks combine plenty of great taste with no trace of gluten, dairy, egg or milk. Our Gluten Free Pretzel Sticks are a delicious alternative to wheat based pretzels and offer all the satisfying flavor and crunch you would expect from America’s Pretzel Bakery. Certified gluten free by GFCO.</p>
     <div class="availability"></div>
   </section>
   <section>
     <header class="specifications"></header>
-    <p class="size"></p>
-    <p class="weight"></p>
+    <p class="size"> Size: 8 oz.</p>
+    <p class="weight">Weight: 226.8 grams </p>
     <footer class="invalidDate"></footer>
   </section>
   <section>
-    <header class="pricing"></header>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
+    <header class="pricing"> Pricing </header>
+    <p class="quantityPricing"> 1 package: $3.09</p>
+    <p class="quantityPricing"> 2 packages: $2.93/ea </p>
+    <p class="quantityPricing"> 3 packages: $2.88/ea</p>
   </section>
 </article>
 <article class="card">
@@ -95,20 +96,20 @@
   </header>
   <section>
     <img src="images/chapstick.jpg" class="productImg">
-    <p class="description"></p>
+    <p class="description"> Keep your lips moist, super-smooth, and happy with eos Lip Balm. Made with soothing shea butter and jojoba oil and packed with antioxidant-rich vitamin E. It's 100% natural, paraben- and petrolatum-free, and gluten-free, too.</p>
     <div class="availability"></div>
   </section>
   <section>
     <header class="specifications"> </header>
-    <p class="size"></p>
-    <p class="weight"></p>
+    <p class="size"> Size: 0.25 oz.</p>
+    <p class="weight"> Weight: 7 grams</p>
     <footer class="invalidDate"></footer>
   </section>
   <section>
-    <header class="pricing"></header>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
+    <header class="pricing"> Pricing</header>
+    <p class="quantityPricing"> 1: $2.99 </p>
+    <p class="quantityPricing"> 6 pack: $14.99</p>
+    <p class="quantityPricing"> 8 pack: $16.96</p>
   </section>
 </article>
 <article class="card">
@@ -117,20 +118,20 @@
   </header>
   <section>
     <img src="images/shampoo.jpeg" class="productImg">
-    <p class="description"></p>
+    <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10 ppm (parts per million) gluten or less. All products are fragrance free. Jason was born in California in 1959 when a group of independent thinkers sought to establish a new kind of personal care for themselves and their families. Taking the name Jason , which means "healer" in Greek, they rejected harsh, risky chemicals. Instead, they blended simple, healing ingredients to create soaps and lotions crafted according to the Jason code of honor: 1. Select safe, gentle and effective ingredients, 2. Rigorously test every formula to ensure safety and efficacy, 3. Never test on animals, 4. Constantly innovate and improve. For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
     <div class="availability"></div>
   </section>
   <section>
     <header class="specifications"></header>
-    <p class="size"></p>
-    <p class="weight"></p>
+    <p class="size"> Size: 16 oz. </p>
+    <p class="weight"> Weight: 473 ml </p>
     <footer class="invalidDate"></footer>
   </section>
   <section>
-    <header class="pricing"></header>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
+    <header class="pricing"> Pricing </header>
+    <p class="quantityPricing"> 1  bottle: $6.73</p>
+    <p class="quantityPricing"> 2 or more: $6.53/ea </p>
+    <p class="quantityPricing"> 6 or more: $6.23/ea</p>
   </section>
 </article>
 <article class="card">
@@ -139,20 +140,20 @@
   </header>
   <section>
     <img src="images/shampoo.jpeg" class="productImg">
-    <p class="description"></p>
+    <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10ppm (parts per million) gluten or less. All products are fragrance free. Jason was born in California in 1959 when a group of independent thinkers sought to establish a new kind of personal care for themselves and their families. Taking the name Jason , which means "healer" in Greek, they rejected harsh, risky chemicals. Instead, they blended simple, healing ingredients to create soaps and lotions crafted according to the Jason code of honor: 1. Select safe, gentle and effective ingredients 2. Rigorously test every formula to ensure safety and efficacy 3. Never test on animals 4. Constantly innovate and improve. For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
     <div class="availability"></div>
   </section>
   <section>
     <header class="specifications"></header>
-    <p class="size"></p>
-    <p class="weight"></p>
+    <p class="size"> Size: 16 oz. </p>
+    <p class="weight"> Weight: 454 grams </p>
     <footer class="invalidDate"></footer>
   </section>
   <section>
-    <header class="pricing"></header>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
-    <p class="quantityPricing"></p>
+    <header class="pricing"> Pricing </header>
+    <p class="quantityPricing"> 1 bottle: $9.97 </p>
+    <p class="quantityPricing"> 2 or more: $9.82/ea</p>
+    <p class="quantityPricing"> 6 or more: $9.36/ea</p>
   </section>
 </article>
 </body>
