--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title> Gluten-free Goddess</title>
+  <link href='https://fonts.googleapis.com/css?family=Galada' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="quiz.css">
 </head>
 <body>
@@ -28,14 +29,17 @@
   <section>
     <img src="images/pancakeMix.jpg" class="productImg">
     <p class="description">
-      Birch Benders Pancake and Waffle Mix Gluten Free are so good, you won’t even miss the wheat! They start with a perfect blend of wheat-free flours, then add their signature Oregon hazelnut meal, resulting in, dare they say, pancake poetry. But don’t take their word for it, the proof is in the pancake! Preparation is a breeze: simply scoop the desired amount of mix into a bowl, add water, mix, and make! That's right, just add water, no eggs or milk necessary! Don't want to use it all at once? Their resealable closure keeps the mix fresh for next time. Easier, healthier, tastier, these pancakes have it all! Pancake and Waffle Mix Gluten Free is organic, kosher, natural, gluten free, and free of soy and wheat.
+      Birch Benders Pancake and Waffle Mix Gluten Free are so good, you won’t even miss the wheat! They start with a perfect blend of wheat-free flours, then add their signature Oregon hazelnut meal, resulting in, dare they say, pancake poetry. But don’t take their word for it, the proof is in the pancake! Pancake and Waffle Mix Gluten Free is organic, kosher, natural, gluten free, and free of soy and wheat.
     </p>
-    <div class="availability"></div>
+    <div class="availability">
+      <p>Available</p>
+    </div>
   </section>
   <section>
-    <header class="specifications"></header>
+    <header class="specifications">
     <p class="size"> Size: 14 oz. </p>
     <p class="weight"> Weight: 35 grams </p>
+    </header>
     <footer class="invalidDate"></footer>
   </section>
   <section>
@@ -53,12 +57,15 @@
     <img src="images/chocolate.jpg" class="productImg">
     <p class="description"> Give in to the delicious taste of Betty Crocker gluten free brownies.
 Betty Crocker brownies make it easy to turn an ordinary day into something special! From the box to the oven in less than five minutes, these great-tasting, gluten free sweets will be enjoyed by your family in no time! </p>
-    <div class="availability"></div>
+    <div class="availability">
+      <p>Available</p>
+    </div>
   </section>
   <section>
-    <header class="specifications"></header>
+    <header class="specifications">
     <p class="size"> Size: 16 oz. </p>
     <p class="weight"> Weight: 454 grams </p>
+    </header>
     <footer class="invalidDate"></footer>
   </section>
   <section>
@@ -75,12 +82,15 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
   <section>
     <img src="images/pretzels.jpg" class="productImg">
     <p class="description"> Made with the finest premium ingredients, our Honey, Mustard &amp; Onion Gluten Free Pretzel Sticks combine plenty of great taste with no trace of gluten, dairy, egg or milk. Our Gluten Free Pretzel Sticks are a delicious alternative to wheat based pretzels and offer all the satisfying flavor and crunch you would expect from America’s Pretzel Bakery. Certified gluten free by GFCO.</p>
-    <div class="availability"></div>
+    <div class="availability">
+      <p>Available</p>
+    </div>
   </section>
   <section>
-    <header class="specifications"></header>
+    <header class="specifications">
     <p class="size"> Size: 8 oz.</p>
     <p class="weight">Weight: 226.8 grams </p>
+    </header>
     <footer class="invalidDate"></footer>
   </section>
   <section>
@@ -97,12 +107,15 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
   <section>
     <img src="images/chapstick.jpg" class="productImg">
     <p class="description"> Keep your lips moist, super-smooth, and happy with eos Lip Balm. Made with soothing shea butter and jojoba oil and packed with antioxidant-rich vitamin E. It's 100% natural, paraben- and petrolatum-free, and gluten-free, too.</p>
-    <div class="availability"></div>
+    <div class="availability">
+      <p>Available</p>
+    </div>
   </section>
   <section>
-    <header class="specifications"> </header>
+    <header class="specifications"> 
     <p class="size"> Size: 0.25 oz.</p>
     <p class="weight"> Weight: 7 grams</p>
+    </header>
     <footer class="invalidDate"></footer>
   </section>
   <section>
@@ -118,13 +131,16 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
   </header>
   <section>
     <img src="images/shampoo.jpeg" class="productImg">
-    <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10 ppm (parts per million) gluten or less. All products are fragrance free. Jason was born in California in 1959 when a group of independent thinkers sought to establish a new kind of personal care for themselves and their families. Taking the name Jason , which means "healer" in Greek, they rejected harsh, risky chemicals. Instead, they blended simple, healing ingredients to create soaps and lotions crafted according to the Jason code of honor: 1. Select safe, gentle and effective ingredients, 2. Rigorously test every formula to ensure safety and efficacy, 3. Never test on animals, 4. Constantly innovate and improve. For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
-    <div class="availability"></div>
+    <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10 ppm (parts per million) gluten or less. All products are fragrance free.  For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
+    <div class="availability">
+      <p>Available</p>
+    </div>
   </section>
   <section>
-    <header class="specifications"></header>
+    <header class="specifications">
     <p class="size"> Size: 16 oz. </p>
     <p class="weight"> Weight: 473 ml </p>
+    </header>
     <footer class="invalidDate"></footer>
   </section>
   <section>
@@ -139,14 +155,17 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
     <h1 class="productName"> Jason's Daily Conditioner </h1>
   </header>
   <section>
-    <img src="images/shampoo.jpeg" class="productImg">
-    <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10ppm (parts per million) gluten or less. All products are fragrance free. Jason was born in California in 1959 when a group of independent thinkers sought to establish a new kind of personal care for themselves and their families. Taking the name Jason , which means "healer" in Greek, they rejected harsh, risky chemicals. Instead, they blended simple, healing ingredients to create soaps and lotions crafted according to the Jason code of honor: 1. Select safe, gentle and effective ingredients 2. Rigorously test every formula to ensure safety and efficacy 3. Never test on animals 4. Constantly innovate and improve. For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
-    <div class="availability"></div>
+    <img src="images/conditioner.jpg" class="productImg">
+    <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10ppm (parts per million) gluten or less. All products are fragrance free.  For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
+    <div class="availability">
+      <p>Available</p>
+    </div>
   </section>
   <section>
-    <header class="specifications"></header>
+    <header class="specifications">
     <p class="size"> Size: 16 oz. </p>
     <p class="weight"> Weight: 454 grams </p>
+    </header>
     <footer class="invalidDate"></footer>
   </section>
   <section>
