--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
   <title> Gluten-free Goddess</title>
   <link href='https://fonts.googleapis.com/css?family=Galada' rel='stylesheet' type='text/css'>
+  <link href='https://fonts.googleapis.com/css?family=Roboto' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" type="text/css" href="quiz.css">
 </head>
 <body>
-<article>  
+<article> 
+ <!-- Nav Bar -->
   <header>
     <nav>
       <ul>
@@ -17,15 +19,18 @@
       </ul>
     </nav>
   </header>
+  <!-- Title and Section About the Website -->
   <section class="about">
     <h1 id="title"> Gluten-Free Goddess</h1>
     <p>  Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water chestnut gourd swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke. </p>
   </section>
 </article>
+<!-- Pancake Card -->
 <article class="card">
   <header>
     <h1 class="productName"> Birch Benders Pancake &amp; Waffle Mix </h1>
   </header>
+  <!-- Pancake Image and Description -->
   <section>
     <img src="images/pancakeMix.jpg" class="productImg">
     <p class="description">
@@ -35,24 +40,33 @@
       <p>Available</p>
     </div>
   </section>
+  <!-- Pancake Specifications -->
   <section>
-    <header class="specifications">
+    <header > 
+    <h4 class="specifications"> Specifications</h4>
     <p class="size"> Size: 14 oz. </p>
     <p class="weight"> Weight: 35 grams </p>
     </header>
-    <footer class="invalidDate"></footer>
+    <footer>
+      <p class="specs"> Specifications valid until 12/14/2016 </p>
+    </footer>
   </section>
+  <!-- Pancake Pricing -->
   <section>
-    <header class="pricing"> Pricing </header>
-    <p class="quantityPricing"> 1 package: $5.92 </p>
-    <p class="quantityPricing"> 3 or more: $5.86/ea</p>
-    <p class="quantityPricing"> 6 or more: $5.80/ea</p>
+    <header> 
+      <h4 class="pricing"> Pricing</h4> 
+      <p class="quantityPricing"> 1 package: $5.92 </p>
+      <p class="quantityPricing"> 3 or more: $5.86/ea</p>
+      <p class="quantityPricing"> 6 or more: $5.80/ea</p>
+    </header>
   </section>
 </article>
+<!-- Brownie Card -->
 <article class="card">
   <header>
     <h1 class="productName"> Betty Crocker Brownie Mix</h1>
   </header>
+  <!-- Brownie Image and Description -->
   <section>
     <img src="images/chocolate.jpg" class="productImg">
     <p class="description"> Give in to the delicious taste of Betty Crocker gluten free brownies.
@@ -61,24 +75,35 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
       <p>Available</p>
     </div>
   </section>
+  <!-- Brownie Specifications -->
   <section>
-    <header class="specifications">
-    <p class="size"> Size: 16 oz. </p>
-    <p class="weight"> Weight: 454 grams </p>
+    <header>
+      <h4 class="specifications"> Specifications</h4>
+      <p class="size"> Size: 16 oz. </p>
+      <p class="weight"> Weight: 454 grams </p>
     </header>
-    <footer class="invalidDate"></footer>
+    <footer>
+      <p class="specs"> Specifications valid until 12/14/2016 </p>
+    </footer>
   </section>
+  <!-- Brownie Pricing -->
   <section>
-    <header class="pricing"> Pricing </header>
-    <p class="quantityPricing"> 1 box: $8.98 </p>
-    <p class="quantityPricing"> 3 or more: $7.98/ea </p>
-    <p class="quantityPricing"> 6 or more: $7.48/ea</p>
+    <header> 
+      <h4 class="pricing"> Pricing</h4> 
+      <p class="quantityPricing"> 1 box: $8.98 </p>
+      <p class="quantityPricing"> 3 or more: $7.98/ea </p>
+      <p class="quantityPricing"> 6 or more: $7.48/ea</p>
+    </header>
   </section>
 </article>
+<!-- Pretzels Card -->
 <article class="card">
   <header>
-    <h1 class="productName"> Synder's Honey-Mustard Pretzels </h1>
+    <h1 class="productName"> 
+    Synder's Honey-Mustard Pretzels 
+    </h1>
   </header>
+  <!-- Pretzels Image and Description -->
   <section>
     <img src="images/pretzels.jpg" class="productImg">
     <p class="description"> Made with the finest premium ingredients, our Honey, Mustard &amp; Onion Gluten Free Pretzel Sticks combine plenty of great taste with no trace of gluten, dairy, egg or milk. Our Gluten Free Pretzel Sticks are a delicious alternative to wheat based pretzels and offer all the satisfying flavor and crunch you would expect from America’s Pretzel Bakery. Certified gluten free by GFCO.</p>
@@ -86,24 +111,33 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
       <p>Available</p>
     </div>
   </section>
+  <!-- Pretzels Specifications -->
   <section>
-    <header class="specifications">
-    <p class="size"> Size: 8 oz.</p>
-    <p class="weight">Weight: 226.8 grams </p>
+    <header>
+      <h4 class="specifications"> Specifications</h4>
+      <p class="size"> Size: 8 oz.</p>
+      <p class="weight">Weight: 226.8 grams </p>
     </header>
-    <footer class="invalidDate"></footer>
+    <footer>
+      <p class="specs"> Specifications valid until 12/14/2016 </p>
+    </footer>
   </section>
+  <!-- Pretzels Pricing  -->
   <section>
-    <header class="pricing"> Pricing </header>
-    <p class="quantityPricing"> 1 package: $3.09</p>
-    <p class="quantityPricing"> 2 packages: $2.93/ea </p>
-    <p class="quantityPricing"> 3 packages: $2.88/ea</p>
+    <header > 
+      <h4 class="pricing"> Pricing</h4> 
+      <p class="quantityPricing"> 1 package: $3.09</p>
+      <p class="quantityPricing"> 2 packages: $2.93/ea </p>
+      <p class="quantityPricing"> 3 packages: $2.88/ea</p>
+    </header>
   </section>
 </article>
+<!-- Chapstick Card -->
 <article class="card">
   <header>
     <h1 class="productName"> eos Chapstick </h1>
   </header>
+  <!-- Chapstick Image and Description -->
   <section>
     <img src="images/chapstick.jpg" class="productImg">
     <p class="description"> Keep your lips moist, super-smooth, and happy with eos Lip Balm. Made with soothing shea butter and jojoba oil and packed with antioxidant-rich vitamin E. It's 100% natural, paraben- and petrolatum-free, and gluten-free, too.</p>
@@ -111,68 +145,97 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
       <p>Available</p>
     </div>
   </section>
+  <!-- Chapstick Specifications -->
   <section>
-    <header class="specifications"> 
-    <p class="size"> Size: 0.25 oz.</p>
-    <p class="weight"> Weight: 7 grams</p>
+    <header> 
+      <h4 class="specifications"> Specifications</h4>
+      <p class="size"> Size: 0.25 oz.</p>
+      <p class="weight"> Weight: 7 grams</p>
     </header>
-    <footer class="invalidDate"></footer>
+    <footer>
+      <p class="specs"> Specifications valid until 12/14/2016 </p>
+    </footer>
   </section>
+  <!-- Chapstick Pricing -->
   <section>
-    <header class="pricing"> Pricing</header>
-    <p class="quantityPricing"> 1: $2.99 </p>
-    <p class="quantityPricing"> 6 pack: $14.99</p>
-    <p class="quantityPricing"> 8 pack: $16.96</p>
+    <header> 
+      <h4 class="pricing">Pricing</h4>
+      <p class="quantityPricing"> 1: $2.99 </p>
+      <p class="quantityPricing"> 6 pack: $14.99</p>
+      <p class="quantityPricing"> 8 pack: $16.96</p>
+    </header>
   </section>
 </article>
+<!-- Shampoo Card -->
 <article class="card">
   <header>
-    <h1 class="productName"> Jason's Daily Shampoo </h1>
+    <h1 class="productName"> 
+    Jason's Daily Shampoo 
+    </h1>
   </header>
+  <!-- Shampoo Image and Description -->
   <section>
-    <img src="images/shampoo.jpeg" class="productImg">
-    <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10 ppm (parts per million) gluten or less. All products are fragrance free.  For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
+      <img src="images/shampoo.jpeg" class="productImg">
+      <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10 ppm (parts per million) gluten or less. All products are fragrance free.  For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
     <div class="availability">
       <p>Available</p>
     </div>
   </section>
+  <!-- Shampoo Specifications -->
   <section>
-    <header class="specifications">
-    <p class="size"> Size: 16 oz. </p>
-    <p class="weight"> Weight: 473 ml </p>
+    <header>
+      <h4 class="specifications"> Specifications</h4>
+      <p class="size"> Size: 16 oz. </p>
+      <p class="weight"> Weight: 473 ml </p>
     </header>
-    <footer class="invalidDate"></footer>
+    <footer>
+      <p class="specs"> Specifications valid until 12/14/2016 </p>
+    </footer>
   </section>
+  <!-- Shampoo Pricing -->
   <section>
-    <header class="pricing"> Pricing </header>
-    <p class="quantityPricing"> 1  bottle: $6.73</p>
-    <p class="quantityPricing"> 2 or more: $6.53/ea </p>
-    <p class="quantityPricing"> 6 or more: $6.23/ea</p>
+    <header> 
+      <h4 class="pricing">Pricing </h4>
+      <p class="quantityPricing"> 1  bottle: $6.73</p>
+      <p class="quantityPricing"> 2 or more: $6.53/ea </p>
+      <p class="quantityPricing"> 6 or more: $6.23/ea</p>
+    </header>
   </section>
 </article>
+<!-- Conditioner Card -->
 <article class="card">
   <header>
-    <h1 class="productName"> Jason's Daily Conditioner </h1>
+    <h1 class="productName"> 
+      Jason's Daily Conditioner 
+    </h1>
   </header>
+  <!-- Conditioner Image and Description -->
   <section>
-    <img src="images/conditioner.jpg" class="productImg">
-    <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10ppm (parts per million) gluten or less. All products are fragrance free.  For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
+      <img src="images/conditioner.jpg" class="productImg">
+      <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10ppm (parts per million) gluten or less. All products are fragrance free.  For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
     <div class="availability">
       <p>Available</p>
     </div>
   </section>
+  <!-- Conditioner Specifications -->
   <section>
-    <header class="specifications">
-    <p class="size"> Size: 16 oz. </p>
-    <p class="weight"> Weight: 454 grams </p>
+    <header>
+      <h4 class="specifications"> Specifications</h4>
+      <p class="size"> Size: 16 oz. </p>
+      <p class="weight"> Weight: 454 grams </p>
     </header>
-    <footer class="invalidDate"></footer>
+    <footer>
+      <p class="specs"> Specifications valid until 12/14/2016 </p>
+    </footer>
   </section>
+  <!-- Conditioner Pricing -->
   <section>
-    <header class="pricing"> Pricing </header>
-    <p class="quantityPricing"> 1 bottle: $9.97 </p>
-    <p class="quantityPricing"> 2 or more: $9.82/ea</p>
-    <p class="quantityPricing"> 6 or more: $9.36/ea</p>
+    <header> 
+      <h4 class="pricing"> Pricing </h4>
+      <p class="quantityPricing"> 1 bottle: $9.97 </p>
+      <p class="quantityPricing"> 2 or more: $9.82/ea</p>
+      <p class="quantityPricing"> 6 or more: $9.36/ea</p>
+    </header>
   </section>
 </article>
 </body>
