Edited about me section and heights of cards

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <!-- Title and Section About the Website -->
   <section class="about">
     <h1 id="title"> Gluten-Free Goddess</h1>
-    <p>  Turnip greens yarrow ricebean rutabaga endive cauliflower sea lettuce kohlrabi amaranth water spinach avocado daikon napa cabbage asparagus winter purslane kale. Celery potato scallion desert raisin horseradish spinach carrot soko. Lotus root water spinach fennel kombu maize bamboo shoot green bean swiss chard seakale pumpkin onion chickpea gram corn pea. Brussels sprout coriander water chestnut gourd swiss chard wakame kohlrabi beetroot carrot watercress. Corn amaranth salsify bunya nuts nori azuki bean chickweed potato bell pepper artichoke. </p>
+    <p>  Seven years ago I found out that I had celiac disease. At first I lamented the fact that I would need to a live a life free of gluten. Thanks to the products that gluten-conscious companies have created, living gluten-free can be quite delicious! This webpage is a collection of all of the wonderful products I have integrated into my life. I hope these products make gluten-free living as spendid as I've found it to be. </p>
   </section>
 </article>
 <!-- Pancake Card -->
@@ -33,6 +33,8 @@
   <!-- Pancake Image and Description -->
   <section>
     <img src="images/pancakeMix.jpg" class="productImg">
+  </section>
+  <section>
     <p class="description">
       Birch Benders Pancake and Waffle Mix Gluten Free are so good, you won’t even miss the wheat! They start with a perfect blend of wheat-free flours, then add their signature Oregon hazelnut meal, resulting in, dare they say, pancake poetry. But don’t take their word for it, the proof is in the pancake! Pancake and Waffle Mix Gluten Free is organic, kosher, natural, gluten free, and free of soy and wheat.
     </p>
@@ -69,6 +71,8 @@
   <!-- Brownie Image and Description -->
   <section>
     <img src="images/chocolate.jpg" class="productImg">
+  </section>
+  <section>
     <p class="description"> Give in to the delicious taste of Betty Crocker gluten free brownies.
 Betty Crocker brownies make it easy to turn an ordinary day into something special! From the box to the oven in less than five minutes, these great-tasting, gluten free sweets will be enjoyed by your family in no time! </p>
     <div class="availability">
@@ -100,12 +104,14 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
 <article class="card">
   <header>
     <h1 class="productName"> 
-    Synder's Honey-Mustard Pretzels 
+    Snyder's Honey-Mustard Pretzels 
     </h1>
   </header>
   <!-- Pretzels Image and Description -->
   <section>
     <img src="images/pretzels.jpg" class="productImg">
+  </section>
+  <section>
     <p class="description"> Made with the finest premium ingredients, our Honey, Mustard &amp; Onion Gluten Free Pretzel Sticks combine plenty of great taste with no trace of gluten, dairy, egg or milk. Our Gluten Free Pretzel Sticks are a delicious alternative to wheat based pretzels and offer all the satisfying flavor and crunch you would expect from America’s Pretzel Bakery. Certified gluten free by GFCO.</p>
     <div class="availability">
       <p>Available</p>
@@ -140,6 +146,8 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
   <!-- Chapstick Image and Description -->
   <section>
     <img src="images/chapstick.jpg" class="productImg">
+  </section>
+  <section>
     <p class="description"> Keep your lips moist, super-smooth, and happy with eos Lip Balm. Made with soothing shea butter and jojoba oil and packed with antioxidant-rich vitamin E. It's 100% natural, paraben- and petrolatum-free, and gluten-free, too.</p>
     <div class="availability">
       <p>Available</p>
@@ -176,6 +184,8 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
   <!-- Shampoo Image and Description -->
   <section>
       <img src="images/shampoo.jpeg" class="productImg">
+  </section>
+  <section>
       <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10 ppm (parts per million) gluten or less. All products are fragrance free.  For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
     <div class="availability">
       <p>Available</p>
@@ -212,6 +222,8 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
   <!-- Conditioner Image and Description -->
   <section>
       <img src="images/conditioner.jpg" class="productImg">
+      </section>
+  <section>
       <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10ppm (parts per million) gluten or less. All products are fragrance free.  For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
     <div class="availability">
       <p>Available</p>
