--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <header>
     <nav>
       <ul>
-        <li> <a href="#"> About </a></li>
+        <li class="selected"> <a href="#"> Featured </a></li>
         <li> <a href="#"> Food </a></li> 
         <li> <a href="#"> Recipes </a></li>
         <li> <a href="#"> Other Products </a></li>
@@ -32,9 +32,9 @@
   </header>
   <!-- Pancake Image and Description -->
   <section>
+  <div>
     <img src="images/pancakeMix.jpg" class="productImg">
-  </section>
-  <section>
+  </div>
     <p class="description">
       Birch Benders Pancake and Waffle Mix Gluten Free are so good, you won’t even miss the wheat! They start with a perfect blend of wheat-free flours, then add their signature Oregon hazelnut meal, resulting in, dare they say, pancake poetry. But don’t take their word for it, the proof is in the pancake! Pancake and Waffle Mix Gluten Free is organic, kosher, natural, gluten free, and free of soy and wheat.
     </p>
@@ -70,9 +70,9 @@
   </header>
   <!-- Brownie Image and Description -->
   <section>
+  <div>
     <img src="images/chocolate.jpg" class="productImg">
-  </section>
-  <section>
+  </div>
     <p class="description"> Give in to the delicious taste of Betty Crocker gluten free brownies.
 Betty Crocker brownies make it easy to turn an ordinary day into something special! From the box to the oven in less than five minutes, these great-tasting, gluten free sweets will be enjoyed by your family in no time! </p>
     <div class="availability">
@@ -109,9 +109,9 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
   </header>
   <!-- Pretzels Image and Description -->
   <section>
+  <div>
     <img src="images/pretzels.jpg" class="productImg">
-  </section>
-  <section>
+  </div>
     <p class="description"> Made with the finest premium ingredients, our Honey, Mustard &amp; Onion Gluten Free Pretzel Sticks combine plenty of great taste with no trace of gluten, dairy, egg or milk. Our Gluten Free Pretzel Sticks are a delicious alternative to wheat based pretzels and offer all the satisfying flavor and crunch you would expect from America’s Pretzel Bakery. Certified gluten free by GFCO.</p>
     <div class="availability">
       <p>Available</p>
@@ -145,9 +145,9 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
   </header>
   <!-- Chapstick Image and Description -->
   <section>
+  <div>
     <img src="images/chapstick.jpg" class="productImg">
-  </section>
-  <section>
+  </div>
     <p class="description"> Keep your lips moist, super-smooth, and happy with eos Lip Balm. Made with soothing shea butter and jojoba oil and packed with antioxidant-rich vitamin E. It's 100% natural, paraben- and petrolatum-free, and gluten-free, too.</p>
     <div class="availability">
       <p>Available</p>
@@ -183,9 +183,9 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
   </header>
   <!-- Shampoo Image and Description -->
   <section>
+  <div>
       <img src="images/shampoo.jpeg" class="productImg">
-  </section>
-  <section>
+  </div>
       <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10 ppm (parts per million) gluten or less. All products are fragrance free.  For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
     <div class="availability">
       <p>Available</p>
@@ -221,9 +221,9 @@ Betty Crocker brownies make it easy to turn an ordinary day into something speci
   </header>
   <!-- Conditioner Image and Description -->
   <section>
+  <div>
       <img src="images/conditioner.jpg" class="productImg">
-      </section>
-  <section>
+  </div>
       <p class="description"> Jason gluten free is a complete line of certified gluten-free hair, face and body care products. Products are certified by the GFCO, meeting strict gluten-free standards and are certified to contain 10ppm (parts per million) gluten or less. All products are fragrance free.  For over 50 years the makers of Jason products have kept this code and committed themselves to the idea of wholesome personal care solutions that are safe for us, our families, and our planet.</p>
     <div class="availability">
       <p>Available</p>
